[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bactorcanet"
version = "0.1.0"
description = "Multi-task CNN package for RCA-encoded multibacterial concentration detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "jiangxuyue"}]
dependencies = [
  "torch>=1.9.0",
  "torchvision>=0.10.0",
  "numpy>=1.19.0",
  "pandas>=1.2.0",
  "pillow>=8.0.0",
  "scikit-learn>=0.24.0",
  "matplotlib>=3.3.0",
  "pyyaml>=6.0",
  "tqdm>=4.0.0"
]

[project.scripts]
bactorcanet = "bactorcanet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
